[package]
name = "graphics-01"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"

#[dependencies.sdl2]
#features = ["use_mac_framework"]
#version = "0.35.2"  # Whichever version you are using